2012-09-24  Peter Beverloo  <peter@chromium.org>

        Allow robots to index bugs on Bugzilla
        https://bugs.webkit.org/show_bug.cgi?id=95688

        Reviewed by Eric Seidel.

        This allows robots to access show_bug.cgi, thus granting them access to
        index contents and discussion on WebKit bugs. All other pages, except
        for the site index itself, still have indexing disabled.

        * robots.txt:

2012-07-13  Ojan Vafai  <ojan@chromium.org>

        PrettyPatch.rb complains about missing checksum for new pixel results
        https://bugs.webkit.org/show_bug.cgi?id=88368

        Reviewed by Tony Chang.

        When adding or removing a file, we incorrectly iterpreted not having an image
        as not having a checksum.

        * PrettyPatch/PrettyPatch.rb:
        * PrettyPatch/PrettyPatch_test.rb:
        I tried to fix the TempFile issue in these tests, but after a couple hours
        of banging my head against this, I have no idea what's breaking.

2012-07-11  Alice Cheng  <alice_cheng@apple.com>

        Deleting content at the top of prettypatch emails destroys HTML formatting
        https://bugs.webkit.org/show_bug.cgi?id=90700
        <rdar://problem/7488232>

        Reviewed by David Kilzer.

        * PrettyPatch/PrettyPatch.rb:

2012-07-10  Adam Barth  <abarth@webkit.org>

        bugs.webkit.org has mixed content
        https://bugs.webkit.org/show_bug.cgi?id=90907

        Reviewed by Eric Seidel.

        Now that we detect http XMLHttpRequests as mixed content, I've noticed
        that we're loading committers.py over http instead of https.  For
        better security, we should use https.

        * committers-autocomplete.js:

2012-05-30  Ojan Vafai  <ojan@chromium.org>

        Only include the image checksum error in pretty-diffs for -expected.png files.
        https://bugs.webkit.org/show_bug.cgi?id=87881

        Reviewed by Tony Chang.

        * PrettyPatch/PrettyPatch.rb: