@@ -1,3 +1,15 @@
+2012-09-25  Peter Gal  <galpeter@inf.u-szeged.hu>
+
+        committers-autocomplete.js works only with WebKit based browsers
+        https://bugs.webkit.org/show_bug.cgi?id=66752
+
+        Reviewed by Darin Adler.
+
+        Modified the code do only add event listeners to the given inputs,
+        and not to the full document.
+
+        * committers-autocomplete.js:
+
 2012-09-24  Peter Beverloo  <peter@chromium.org>
 
         Allow robots to index bugs on Bugzilla
